--- a/Contact.html
+++ b/Contact.html
@@ -27,10 +27,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="Contact.html">Contact Me</a></li>
 						</ul>
-						<ul class="actions stacked">
-						<!--	<li><a href="#" class="button primary fit">Get Started</a></li> -->
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
+						
 					</nav>
 
 				<!-- Main -->
@@ -74,7 +71,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">steffysenson@gmail.com</a>
+										<a href="mailto:steffysenson@gmail.com">steffysenson@gmail.com</a>
 									</div>
 								</section>
 								<section>
