--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						</ul>
 						<ul class="actions stacked">
 							<!-- <li><a href="#" class="button primary fit">Get Started</a></li> -->
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="https://drive.google.com/file/d/1m6MdoZ492tftAM8Ha7k6xvyB04l_lG4B/view?usp=sharing" class="button fit">Resume</a></li>
 						</ul>
 					</nav>
 
