--- a/Contact.html
+++ b/Contact.html
@@ -61,7 +61,7 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><a style:"text-decoration: none;" href="mailto:steffysenson@gmail.com"><input type="submit" value="Send Message" /></a></li>
+										<li><a href="mailto:steffysenson@gmail.com"><input type="submit" value="Send Message" /></a></li>
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
 								</form>
